<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gmapping</name>
  <version>1.4.2</version>
  <description>This package contains a ROS 2 wrapper for OpenSlam's Gmapping. 
  The gmapping package provides laser-based SLAM (Simultaneous Localization and Mapping), 
  as a ROS node called slam_gmapping. Using slam_gmapping, you can create a 2-D occupancy
  grid map (like a building floorplan) from laser and pose data collected by a mobile robot.
  </description>
  <author>Brian Gerkey</author>
  <maintainer email="santosh.thoduka@gmail.com">Santosh Thoduka</maintainer>
  <license>BSD</license>
  <license>Apache 2.0</license>

  <url>http://ros.org/wiki/gmapping</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>openslam_gmapping</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
